// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render input correctly 1`] = `
<div
  className="display"
>
  <div
    className="display-result"
    type="numbers"
  >
     
  </div>
  <div
    className="display-numbers"
    id="display"
    type="numbers"
  >
    1
    3
    +
    0
  </div>
</div>
`;

exports[`It should render result correctly 1`] = `
<div
  className="display"
>
  <div
    className="display-result"
    type="numbers"
  >
     
    53424.00912
  </div>
  <div
    className="display-numbers"
    id="display"
    type="numbers"
  />
</div>
`;

exports[`It should render the empty Display correctly 1`] = `
<div
  className="display"
>
  <div
    className="display-result"
    type="numbers"
  >
     
  </div>
  <div
    className="display-numbers"
    id="display"
    type="numbers"
  />
</div>
`;
